# luxtools

./: .gitignore  LICENSE  pyproject.toml  readme.md  setup.py
.github/workflows/: ci.yml
luxtools/functional/: overload.py  partial.py  test_compose.py
luxtools/scientific/: __init__.py  test_printing.py
src/luxtools/: __init__.py
src/luxtools/functional/: __init__.py  overload.py  partial.py  test_partial.py
src/luxtools/scientific/: error_propagation.py
test/: test_compose.py
test/functional/: test_partial.py
