[project]
name = "luxtools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lux", email = "luna@lunalux.io" }
]
requires-python = ">=3.13"
dependencies = [
    "typeguard>=4.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "numpy>=2.2.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "torch>=2.6.0",
]
